<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutUsActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsstring1"
        android:id="@+id/line1"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="#000000"
       android:padding="10dp" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/aboutUsstring2"
        android:textAlignment="center"
        android:textColor="#14568c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/line1"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsstring3"
        android:id="@+id/line3"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsstring4"
        android:id="@+id/line4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#47a64a"
        android:padding="10dp"
       app:layout_constraintTop_toBottomOf="@+id/line3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsstring5"
        android:id="@+id/line5"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="#000000"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintLeft_toRightOf="@+id/line4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsstring6"
        android:id="@+id/line6"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintLeft_toRightOf="@+id/line5"
        />




</android.support.constraint.ConstraintLayout>